*** Unreleased ***
- Enhancements
Move function calculPresence in dedicated class (WorkingHours)
Allows more permissive entries in working hours

-Fixes
Remove HTML entities in closing days

*** Version 20.10.00       (2020-10-09)   ***
- Enhancements
Add working hours exceptions
Retrieve absences from microsoft graph API
Add a cron script to purge the log table: planningBibio:PurgeLogTable
Check journey times between site / areas
Having "Full day" checked by default in absences is configurable
Check journey times between absences and jobs
Enable web profiler on dev environment
Symfonisation of admin -> activites
Use Doctrine ORM for skill pages
Use fine tuning of hours in holidays forms
Mass modification of agents
Symfonize agenda/index page
Stick planning times row and job columns
Symfonize and Doctrinize postes/index.php

-Fixes
Use fine tuning of hours in absence forms
Fix the control of plannings when an absence is recorded
Fix removal of reccuring absences
Set default value for start and end hours when saving an absence
Fix admin info and absences info forms
fix retrieving of start hour when adding absence
Prevent duplicating working hours via clone option

*** Version 20.04.00       (2020-06-15)   ***
- Enhancements
Include symfony framework
Move absences pages into a symfony controller
Move absences/info pages into a symfony controller
Move admin/info pages into a symfony controller
Move agents pages into a symfony controller
Move configuration page into a symfony controller
Move help page into a symfony controller
Move holidays pages into a symfony controller
Ability to check permissions on symfony kernel.request event
Add unit tests
Ability to request holiday in days (optionnal)
Ability to request holiday on half day
Add a second notifications workflow on absences
Ability to add documents on absences
Ability to change user password by typing a new one into a form
Add free breaktimes on working hours